// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.eventgroups;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.securecomputation.eventgroups";
option java_multiple_files = true;
option java_outer_classname = "CampaignMetadataProto";

message CampaignMetadata {
  // ID referencing the campaign in an external system, provided by the
  // `DataProvider`. This value should be used to help the `DataProvider`
  // synchronize their metadata with the EventGroupsService. See
  // `EventGroupMetadata` which provides a set of identifiers with better
  // defined semantics.
  string event_group_reference_id = 1;
  string brand_name = 2;
  string campaign_name = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  // ID referencing the `MeasurementConsumer` in an external system, provided out-of-band.
  string measurement_consumer_name = 6;
  repeated string media_types = 7;
}

message Campaigns {
  repeated CampaignMetadata campaigns_metadata = 1;
}
